[gd_scene load_steps=2 format=3 uid="uid://cn1x3y4r5jk8l"]

[ext_resource type="Script" path="res://addons/track_editor/track_editor_panel.gd" id="1_track_editor_panel"]

[node name="TrackEditorPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_track_editor_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NASCAR Track Editor"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TrackSelectorContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TrackSelectorContainer"]
layout_mode = 2
text = "Track:"

[node name="TrackSelector" type="OptionButton" parent="MarginContainer/VBoxContainer/TrackSelectorContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ready"
horizontal_alignment = 1

[connection signal="item_selected" from="MarginContainer/VBoxContainer/TrackSelectorContainer/TrackSelector" to="." method="_on_track_selected"]
